EXTRA_DIST =\
	projects/visualc7/GameEngine.sln\
	projects/visualc7/GameEngine.suo\
	projects/visualc7/GameEngine.vcproj\
	projects/visualc7/TestCollision.vcproj\
	projects/visualc7/TestHmesh.vcproj\
	projects/visualc7/TexPainter.vcproj\
	projects/visualc7/Showcase.vcproj\
	projects/visualc8/GameEngine.sln\
	projects/visualc8/GameEngine.suo\
	projects/visualc8/GameEngine.vcproj\
	projects/visualc8/TestCollision.vcproj\
	projects/visualc8/TestHmesh.vcproj\
	projects/visualc8/TexPainter.vcproj\
	projects/visualc8/Showcase.vcproj

SUBDIRS = src test
