AC_INIT(GameEngine, 0.1.0)
AM_INIT_AUTOMAKE
AC_CANONICAL_HOST

AC_PROG_CXX
AC_PROG_CPP
AC_PROG_LIBTOOL

case "${host}" in
*darwin*)
	GE_CXXFLAGS=""
	GE_LDFLAGS="-framework OpenGL -framework GLUT -ljpeg -lpng -lpthread"
	GE_LDADD="" ;;
*)
	GE_CXXFLAGS=""
	GE_LDFLAGS=""
	GE_LDADD="-lGL -lGLU -lglut -ljpeg -lpng -lpthread";;
esac

AC_SUBST([GE_CXXFLAGS])
AC_SUBST([GE_LDFLAGS])
AC_SUBST([GE_LDADD])

AC_OUTPUT([
Makefile
src/util/Makefile
src/io/Makefile
src/image/Makefile
src/engine/Makefile
test/Makefile
])
